# docs/openapi.yaml
@@ -56,8 +56,8 @@ paths:
             schema:
               $ref: '#/components/schemas/postentityrequest'
       responses:
-        '200':
-          description: Successful Query
+        '201':
+          description: Created Successfully
           content:
             application/json:
               schema:
@@ -115,8 +115,8 @@ paths:
             schema:
               $ref: '#/components/schemas/postingestionrequest'
       responses:
-        '200':
-          description: Successful Query
+        '201':
+          description: Created Successfully
           content:
             application/json:
               schema:
@@ -234,8 +234,8 @@ paths:
             type: string
             maxLength: 512
       responses:
-        '200':
-          description: Successful Query
+        '201':
+          description: Created Successfully
           content:
             application/json:
               schema:
